# bmark

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check_deploy.yml  deploy.yml
src/: CMakeLists.txt  bmark.cpp  bmark.h  cli.rs  main.cpp  main.rs
