[package]
name = "bmark"
version = "0.1.2"
edition = "2021"
description = "Bookmarks cli for your local file system."
readme = "README.md"
documentation = "https://github.com/BalderHolst/bmark" # TODO
homepage = "https://github.com/BalderHolst/bmark" # TODO
repository = "https://github.com/BalderHolst/bmark"
license = "MIT"
keywords = ["bookmarks", "cli", "local", "terminal", "dmenu"]
categories = ["command-line-utilities"]

[dependencies]
directories = "5.0.0"
serde = { version = "1.0.159" } 
toml = "0.7.3"
