[package]
name = "bmark"
version = "0.1.4"
edition = "2021"
description = "Bookmarks cli for your local file system."
readme = "README.md"
homepage = "https://BalderHolst.com/projects/bmark"
repository = "https://github.com/BalderHolst/bmark"
license = "MIT"
keywords = ["bookmarks", "cli", "local", "terminal", "rofi"]
categories = ["command-line-utilities"]

[dependencies]
directories = "5.0.0"
fuzzy_finder = "0.3.2"
serde = { version = "1.0.159" } 
toml = "0.7.3"
